Services/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: vaultwarden
  template:
    metadata:
      name: vaultwarden
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi

      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden
